Undo formatting changes.